@@ -9,6 +9,7 @@ class Customer extends Person
 		$this->db->from('customers');	
 		$this->db->join('people', 'people.person_id = customers.person_id');
 		$this->db->where('customers.person_id',$person_id);
+		$this->db->where('deleted',0);		
 		$query = $this->db->get();
 		
 		return ($query->num_rows()==1);
@@ -21,6 +22,7 @@ class Customer extends Person
 	{
 		$this->db->from('customers');
 		$this->db->join('people','customers.person_id=people.person_id');			
+		$this->db->where('deleted',0);
 		$this->db->order_by("last_name", "asc");
 		return $this->db->get();		
 	}
@@ -32,6 +34,7 @@ class Customer extends Person
 	{
 		$this->db->from('customers');	
 		$this->db->join('people', 'people.person_id = customers.person_id');
+		$this->db->where('deleted',0);
 		$this->db->where('customers.person_id',$customer_id);
 		$query = $this->db->get();
 		
@@ -64,6 +67,7 @@ class Customer extends Person
 	{
 		$this->db->from('customers');
 		$this->db->join('people', 'people.person_id = customers.person_id');		
+		$this->db->where('deleted',0);
 		$this->db->where_in('customers.person_id',$customer_ids);
 		$this->db->order_by("last_name", "asc");
 		return $this->db->get();		
@@ -102,20 +106,8 @@ class Customer extends Person
 	*/
 	function delete($customer_id)
 	{
-		$success=false;
-		
-		//Run these queries as a transaction, we want to make sure we do all or nothing
-		$this->db->trans_start();
-		
-		//delete from customers table
-		if($this->db->delete('customers', array('person_id' => $customer_id)))
-		{
-			//delete from Person table
-			$success = parent::delete($customer_id);
-		}
-		
-		$this->db->trans_complete();		
-		return $success;
+		$this->db->where('person_id', $customer_id);
+		return $this->db->update('customers', array('deleted' => 1));
 	}
 	
 	/*
@@ -123,19 +115,8 @@ class Customer extends Person
 	*/
 	function delete_list($customer_ids)
 	{
-		$success=false;
-
-		//Run these queries as a transaction, we want to make sure we do all or nothing
-		$this->db->trans_start();
-
 		$this->db->where_in('person_id',$customer_ids);
-		if ($this->db->delete('customers'))
-		{
-			$success = parent::delete_list($customer_ids);
-		}
-		
-		$this->db->trans_complete();		
-		return $success;
+		return $this->db->update('customers', array('deleted' => 1));
  	}
  	
  	/*
@@ -147,9 +128,9 @@ class Customer extends Person
 		
 		$this->db->from('customers');
 		$this->db->join('people','customers.person_id=people.person_id');	
-		$this->db->like('first_name', $search); 
-		$this->db->or_like('last_name', $search);
-		$this->db->or_like("CONCAT(`first_name`,' ',`last_name`)",$search);		
+		$this->db->where("(first_name LIKE '%".$this->db->escape_like_str($search)."%' or 
+		last_name LIKE '%".$this->db->escape_like_str($search)."%' or 
+		CONCAT(`first_name`,' ',`last_name`) LIKE '%".$this->db->escape_like_str($search)."%') and deleted=0");
 		$this->db->order_by("last_name", "asc");		
 		$by_name = $this->db->get();
 		foreach($by_name->result() as $row)
@@ -159,6 +140,7 @@ class Customer extends Person
 		
 		$this->db->from('customers');
 		$this->db->join('people','customers.person_id=people.person_id');	
+		$this->db->where('deleted',0);		
 		$this->db->like("email",$search);
 		$this->db->order_by("email", "asc");		
 		$by_email = $this->db->get();
@@ -169,6 +151,7 @@ class Customer extends Person
 
 		$this->db->from('customers');
 		$this->db->join('people','customers.person_id=people.person_id');	
+		$this->db->where('deleted',0);		
 		$this->db->like("phone_number",$search);
 		$this->db->order_by("phone_number", "asc");		
 		$by_phone = $this->db->get();
@@ -179,6 +162,7 @@ class Customer extends Person
 		
 		$this->db->from('customers');
 		$this->db->join('people','customers.person_id=people.person_id');	
+		$this->db->where('deleted',0);		
 		$this->db->like("account_number",$search);
 		$this->db->order_by("account_number", "asc");		
 		$by_account_number = $this->db->get();
@@ -205,9 +189,9 @@ class Customer extends Person
 		
 		$this->db->from('customers');
 		$this->db->join('people','customers.person_id=people.person_id');	
-		$this->db->like('first_name', $search); 
-		$this->db->or_like('last_name', $search);
-		$this->db->or_like("CONCAT(`first_name`,' ',`last_name`)",$search);		
+		$this->db->where("(first_name LIKE '%".$this->db->escape_like_str($search)."%' or 
+		last_name LIKE '%".$this->db->escape_like_str($search)."%' or 
+		CONCAT(`first_name`,' ',`last_name`) LIKE '%".$this->db->escape_like_str($search)."%') and deleted=0");
 		$this->db->order_by("last_name", "asc");		
 		$by_name = $this->db->get();
 		foreach($by_name->result() as $row)
@@ -217,6 +201,7 @@ class Customer extends Person
 		
 		$this->db->from('customers');
 		$this->db->join('people','customers.person_id=people.person_id');	
+		$this->db->where('deleted',0);		
 		$this->db->like("account_number",$search);
 		$this->db->order_by("account_number", "asc");		
 		$by_account_number = $this->db->get();
@@ -240,12 +225,12 @@ class Customer extends Person
 	{
 		$this->db->from('customers');
 		$this->db->join('people','customers.person_id=people.person_id');		
-		$this->db->like('first_name', $search);
-		$this->db->or_like('last_name', $search); 
-		$this->db->or_like('email', $search); 
-		$this->db->or_like('phone_number', $search);
-		$this->db->or_like('account_number', $search);
-		$this->db->or_like("CONCAT(`first_name`,' ',`last_name`)",$search);
+		$this->db->where("(first_name LIKE '%".$this->db->escape_like_str($search)."%' or 
+		last_name LIKE '%".$this->db->escape_like_str($search)."%' or 
+		email LIKE '%".$this->db->escape_like_str($search)."%' or 
+		phone_number LIKE '%".$this->db->escape_like_str($search)."%' or 
+		account_number LIKE '%".$this->db->escape_like_str($search)."%' or 
+		CONCAT(`first_name`,' ',`last_name`) LIKE '%".$this->db->escape_like_str($search)."%') and deleted=0");		
 		$this->db->order_by("last_name", "asc");
 		
 		return $this->db->get();	
